--- a/frontend/src/pages/Portfolio.css
+++ b/frontend/src/pages/Portfolio.css
@@ -96,18 +96,18 @@
   
   /* Background images */
   .image-0 {
-    background-image: url("C:\Users\JOYDIP\Desktop\RJConsultencyservice\frontend\src\assets\ecommercewebsite.jpg");
+    background-image: url("https://protfoliorj.onrender.com/uplodes/ecommercewebsite.jpg");
   }
   
   .image-1 {
-    background-image: url("C:\Users\JOYDIP\Desktop\RJConsultencyservice\frontend\src\assets\mobilebookinapp.jpg");
+    background-image: url("https://protfoliorj.onrender.com/uplodes/mobilebookinapp.jpg");
   }
   
   .image-2 {
-    background-image: url("C:\Users\JOYDIP\Desktop\RJConsultencyservice\frontend\src\assets\businesswebsite.jpeg");
+    background-image: url("https://protfoliorj.onrender.com/uplodes/businesswebsite.jpeg");
   }
   
   .image-3 {
-    background-image: url("C:\Users\JOYDIP\Desktop\RJConsultencyservice\frontend\src\assets\digitalcampaignplatform.jpeg");
+    background-image: url("https://protfoliorj.onrender.com/uplodes/digitalcampaignplatform.jpeg");
   }
   
