--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -14,7 +14,7 @@
   .logo {
     width: 120px;
     height: 50px;
-    background-image: url('C:\Users\JOYDIP\Desktop\RJConsultencyservice\frontend\src\assets\rjlogo1.png'); /* Your logo path */
+    background-image: url('https://protfoliorj.onrender.com/uplodes/rjlogo1.png'); /* Your logo path */
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
